syntax = "proto2";
package bgs.protocol;
import "google/protobuf/descriptor.proto";


message BGSServiceOptions {
	enum ServiceType {
		SERVICE_TYPE_RPC = 0;
		SERVICE_TYPE_EVENT = 1;
		SERVICE_TYPE_EVENT_BROADCAST = 2;
	}
	optional string descriptor_name = 1;
	optional uint32 version = 4;
	optional string shard_name = 5;
	optional bool resolve_client_instance = 6;
	optional .bgs.protocol.BGSServiceOptions.ServiceType type = 7;
}

message SDKServiceOptions {
	optional bool inbound = 1;
	optional bool outbound = 2;
	optional bool use_client_id = 3;
}
