/* AUTO-GENERATED FILE. DO NOT MODIFY.
 */
syntax = "proto2";

package bgs.protocol.channel.v1;

import "bgs/low/pb/client/channel_types.proto";
import "bgs/low/pb/client/account_types.proto";
import "bgs/low/pb/client/voice_types.proto";
import "bgs/low/pb/client/rpc_types.proto";

option java_multiple_files = true;
option java_generic_services = true;

option cc_generic_services = false;

message GetLoginTokenRequest {
  optional .bgs.protocol.account.v1.GameAccountHandle member_id = 3;
  optional uint32 version = 4;
}

message GetLoginTokenResponse {
  optional .bgs.protocol.VoiceCredentials credentials = 1;
}

message GetJoinTokenRequest {
  optional .bgs.protocol.channel.v1.ChannelId channel_id = 2;
  optional .bgs.protocol.account.v1.GameAccountHandle member_id = 4;
  optional uint32 version = 5;
}

message GetJoinTokenResponse {
  optional string channel_uri = 1;
  optional .bgs.protocol.VoiceCredentials credentials = 2;
}

service ChannelVoiceService {
  option (service_options).descriptor_name = "bnet.protocol.channel.v1.ChannelVoiceService";
  option (service_options).shard_name = "channel";
  option (service_options).is_global = false;
  option (sdk_service_options).outbound = true;

  rpc GetLoginToken (.bgs.protocol.channel.v1.GetLoginTokenRequest) returns (.bgs.protocol.channel.v1.GetLoginTokenResponse) {
    option (method_options).id = 1;
  }

  rpc GetJoinToken (.bgs.protocol.channel.v1.GetJoinTokenRequest) returns (.bgs.protocol.channel.v1.GetJoinTokenResponse) {
    option (method_options).id = 2;
  }
}
