/* AUTO-GENERATED FILE. DO NOT MODIFY.
 */
syntax = "proto2";

package bgs.protocol.report.v1;

import "bgs/low/pb/client/account_types.proto";
import "bgs/low/pb/client/report_types.proto";
import "bgs/low/pb/client/rpc_types.proto";

option java_multiple_files = true;
option java_generic_services = true;

option cc_generic_services = false;

message SendReportRequest {
  required .bgs.protocol.report.v1.Report report = 1;
}

message SubmitReportRequest {
  optional .bgs.protocol.account.v1.GameAccountHandle agent_id = 1;
  optional .bgs.protocol.report.v1.ReportType report_type = 2;
}

service ReportService {
  option (service_options).descriptor_name = "bnet.protocol.report.ReportService";
  option (service_options).shard_name = "report";
  option (sdk_service_options).outbound = true;

  rpc SendReport (.bgs.protocol.report.v1.SendReportRequest) returns (.bgs.protocol.NoData) {
    option (method_options).id = 1;
  }

  rpc SubmitReport (.bgs.protocol.report.v1.SubmitReportRequest) returns (.bgs.protocol.NoData) {
    option (method_options).id = 2;
  }
}
